style: adjust paddings and fix layout issues

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ a {
 .logo {
     color: #F9FAF8;
     font-size: 24px;
+    padding-right: 20px;
 }
 
 .header {
@@ -162,12 +163,10 @@ button {
 }
 
 .quote-signature {
+    width: 100%;
     font-size: 20px;
     font-weight: bold;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-right: 30%;
+    text-align: right;
 }
 
 .call-to-action-container {
@@ -209,6 +208,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-right: 20px;
 }
 
 .right-side {
